# nvcomp

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Contributors.md  Dockerfile  Jenkinsfile  LICENSE  README.md  gitignore
benchmarks/: CMakeLists.txt  ExampleFloatData.csv  ExampleTable.txt  benchmark.sh  benchmark_all_algorithms.sh  benchmark_allgather.cpp  benchmark_ans.cpp  benchmark_ans_chunked.cu  benchmark_bitcomp.cpp  benchmark_bitcomp_chunked.cu  benchmark_cascaded.cpp  benchmark_cascaded_auto.cpp  benchmark_cascaded_chunked.cu  benchmark_common.h  benchmark_deflate_chunked.cu  benchmark_gdeflate.cpp  benchmark_gdeflate_chunked.cu  benchmark_hlif.cpp  benchmark_hlif.hpp  benchmark_hlif.sh  benchmark_hlif_v2.hpp  benchmark_lz4.cpp  benchmark_lz4_chunked.cpp  benchmark_lz4_chunked.cu  benchmark_lz4_synth.cpp  benchmark_lz4_v2.cpp  benchmark_snappy.cpp  benchmark_snappy_chunked.cpp  benchmark_snappy_chunked.cu  benchmark_snappy_synth.cpp  benchmark_snappy_v2.cpp  benchmark_template_chunked.cuh  benchmark_zstd_chunked.cu  generate_bar_charts.py  sc20blog_files.csv  sc20blog_runall.py  text_to_binary.py
cmake/: Findgdeflate.cmake
doc/: Benchmarks.md  algorithms_overview.md  batched-quickstart.md  cascaded_overview.md  cpp_quickstart.md  highlevel_cpp_quickstart.md  lowlevel_c_quickstart.md  lz4_overview.md  selector-quickstart.md
docker/: Dockerfile
examples/: BatchData.h  CMakeLists.txt  bitcomp_native_lossyFP.cu  deflate_cpu_compression.cu  deflate_cpu_decompression.cu  gdeflate_cpu_compression.cu  gzip_gpu_decompression.cu  high_level_quickstart_example.cpp  low_level_quickstart_example.cpp  lz4_cpu_compression.cu  lz4_cpu_decompression.cu  nvcomp_gds.cu  standard_crc_checksum.cpp
include/: cascaded.h  cascaded.hpp  lz4.h  lz4.hpp  nvcomp.h  nvcomp.hpp
include/nvcomp/: bitcomp.h  bitcomp.hpp  cascaded.h  cascaded.hpp  gdeflate.h  gdeflate.hpp  lz4.h  lz4.hpp  nvcompManager.hpp  nvcompManagerFactory.hpp  snappy.h  snappy.hpp
scripts/: benchmark.sh
src/: BitcompMetadata.cpp  BitcompMetadata.h  BitcompNvcomp.cpp  CMakeLists.txt  CascadedCompressionGPU.cu  CascadedCompressionGPU.h  CascadedDecompression.cu  CascadedKernels.cuh  CascadedMetadata.cpp  CascadedMetadata.h  CascadedMetadataOnGPU.cu  CascadedMetadataOnGPU.h  CascadedSelector.cpp  CascadedSelector.h  CascadedSelectorKernels.cu  CascadedSelectorKernels.h  CudaUtils.cu  CudaUtils.h  DeltaGPU.cu  LZ4.cpp  LZ4Batch.cpp  LZ4BatchCompressor.cu  LZ4BatchCompressor.h  LZ4CompressionKernels.cu  LZ4CompressionKernels.h  LZ4Kernels.cuh  LZ4Kernels.h  LZ4Metadata.cpp  LZ4Metadata.h  LZ4MetadataOnGPU.cpp  LZ4MetadataOnGPU.h  Metadata.cpp  Metadata.h  PinnedMemory.h  RunLengthEncodeGPU.cu  SnappyBatch.cpp  SnappyKernels.cu  SnappyKernels.cuh  SnappyKernels.h  TempSpaceBroker.cpp  (+4 more)
src/highlevel/: BatchManager.hpp  BatchedLZ4Metadata.cpp  BatchedLZ4Metadata.h  BitcompManager.cu  BitcompManager.hpp  BitcompMetadata.cpp  BitcompMetadata.h  BitcompNvcomp.cpp  CascadedBatchManager.hpp  CascadedCommon.h  CascadedCompressionGPU.cu  CascadedCompressionGPU.h  CascadedDecompression.cu  CascadedDecompressionKernels.cuh  CascadedHlifKernels.cu  CascadedHlifKernels.h  CascadedManager.hpp  CascadedMetadata.cpp  CascadedMetadata.h  CascadedMetadataOnGPU.cu  CascadedMetadataOnGPU.h  CascadedSelector.cpp  CascadedSelector.h  CascadedSelectorKernels.cu  CascadedSelectorKernels.h  CompressionConfigs.cpp  CompressionConfigs.hpp  GdeflateBatchManager.hpp  GdeflateManager.cpp  HighLevelLZ4API.cpp  LZ4BatchCompressor.cu  LZ4BatchCompressor.h  LZ4BatchManager.hpp  LZ4Compressor.cu  LZ4Compressor.h  LZ4Decompressor.cu  LZ4Decompressor.h  LZ4HlifKernels.cu  LZ4HlifKernels.h  LZ4Manager.hpp  (+24 more)
src/highlevel/test/: CascadedAuto_test.cpp  CascadedMetadata_test.cpp  CascadedSelector_test.cpp  DecompressHelpers_test.cpp  PinnedPtrPool_test.cpp
src/lowlevel/: BitcompBatch.cu  CascadedBatch.cu  LZ4Batch.cpp  LZ4CompressionKernels.cu  LZ4CompressionKernels.h  SnappyBatch.cpp  SnappyBatchKernels.cu  SnappyBatchKernels.h  ansBatch.cpp  gdeflateBatch.cpp  gdeflateKernels.cu
src/nvcomp_common_deps/: hlif_shared.cuh  hlif_shared_types.h  shared_types.h
src/test/: BitPackGPU_test.cpp  CMakeLists.txt  CascadedAuto_test.cpp  CascadedMetadata_test.cpp  CascadedSelector_test.cpp  CudaUtils_test.cpp  DecompressHelpers_test.cpp  DeltaGPU_test.cpp  RunLengthEncodeGPU_test.cpp  SnappyLargeTokens_test.cpp  TempSpaceBroker_test.cpp
tests/: CMakeLists.txt  test_ans_batch_c_api.c  test_batch_c_api.h  test_batch_lz4_decomp.c  test_bitcomp.cpp  test_bitcomp_batch.cpp  test_bitcomp_batch_c_api.c  test_c_api.c  test_cascaded.c  test_cascaded.cpp  test_cascaded_batch.cpp  test_cascaded_c_api.c  test_cascaded_cpp_api.cpp  test_cascaded_selector.cpp  test_common.h  test_cpp_api.cpp  test_decompress_c_api.c  test_gdeflate_batch_c_api.c  test_lz4.cpp  test_lz4batch_c_api.c  test_random.cpp  test_random_auto.cpp  test_random_lz4.cpp  test_snappy_batch_c_api.c
