file(GLOB EXAMPLE_SOURCES *.cpp *.c)
include_directories(${CUDA_TOOLKIT_INCLUDE})

find_package(Threads REQUIRED)

function(add_test_file EXAMPLE_SOURCE)
  get_filename_component(BARE_NAME "${EXAMPLE_SOURCE}" NAME_WE)
  add_executable(${BARE_NAME} ${EXAMPLE_SOURCE})
  target_link_libraries(${BARE_NAME} nvcomp)
  if(USE_RMM)
    target_link_libraries(${BARE_NAME} rmm)
  endif(USE_RMM)
  if(THREADS_HAVE_PTHREAD_ARG)
    target_compile_options(${BARE_NAME} PUBLIC "-pthread")
  endif()
  if(CMAKE_THREAD_LIBS_INIT)
    target_link_libraries(${BARE_NAME} "${CMAKE_THREAD_LIBS_INIT}")
  endif()
  add_test(NAME ${BARE_NAME} COMMAND ${BARE_NAME})
endfunction()

foreach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
  get_filename_component(BARE_NAME "${EXAMPLE_NAME}" NAME_WE)
  add_test_file(${EXAMPLE_SOURCE} ${EXAMPLE_NAME})
endforeach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
